fix vbf_interpreter_and_transpiler on firefox

--- a/vbf_transpiler_and_interpreter/style.css
+++ b/vbf_transpiler_and_interpreter/style.css
@@ -131,7 +131,6 @@ a {
     padding: 3px;
     border: none;
     font-size: 1.12rem;
-    user-select: none;
     overflow: auto;
     resize: none;
 
